--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="logged-in" style="display: none;">
                     <a href="#" class="grey-text" id="logout">Logout</a>
                 </li>
-                <li class="logged-in" style="display: none;">
+                <li class="admin" style="display: none;">
                     <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
                 </li>
                 <li class="logged-out" style="display: none;">
@@ -35,6 +35,12 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Admin Actions -->
+    <form class="center-align admin-actions admin" style="margin: 40px auto; max-width: 300px; display: none;">
+        <input type="email" placeholder="User email" id="admin-email" required />
+        <button class="btn-small yellow darken-2 z-depth-0">Make Admin</button>
+    </form>
 
     <!-- SIGN UP MODAL -->
     <div id="modal-signup" class="modal">
@@ -111,6 +117,7 @@
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-functions.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -132,6 +139,7 @@
   //make auth and firestore ref
   const auth = firebase.auth();
   const db = firebase.firestore();
+  const functions = firebase.functions();
 
 </script>
 
