--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <label for="signup-bio">One Line Bio</label>
                 </div>
                 <button class="btn yellow darken-2 z-depth-0">Sign up</button>
+                <p class="error pink-text center-align"></p>
             </form>
         </div>
     </div>
@@ -78,9 +79,12 @@
                     <label for="login-password">Your password</label>
                 </div>
                 <button class="btn yellow darken-2 z-depth-0">Login</button>
+                <p class="error pink-text center-align"></p>
             </form>
         </div>
     </div>
+
+    <!-- Account modal-->
     <div id="modal-account" class="modal">
         <div class="modal-content center-align">
             <h4>Account details</h4><br />
